# anomaly-modding-tool

./: Cargo.toml  README.md  build.rs  config.json
resources/: ModOrganizer.ini  config.json  nxmhandler.ini
src/: actions.rs  addonlist.rs  app.rs  backup.rs  config.rs  main.rs  response_structs.rs
