[package]
name = "anomaly_modder_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.91"
regex = "1.7.0"
tempfile = "3.3.0"
once_cell = "1.17.0"
fs_extra = "1.2.0"
eframe = "0.20.1"
egui = "0.20.1"
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
zip = "0.6.3"
walkdir = "2.3.2"
anyhow = "1.0.68"
http = "0.2.8"
futures-util = "0.3.25"
toml = "0.5.10"
indexmap = { version = "1.9.2", features = ["serde"] }
serde_with = { version = "2.2.0", features = ["indexmap_1"] }

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
